// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`envConfigMap getOptions() returns default options when no options are provided 1`] = `
Object {
  "coerceNull": true,
  "coerceUndefined": true,
  "getter": [Function],
  "redactor": [Function],
  "types": Object {
    "arrayCommaDelim": [Function],
    "boolean": [Function],
    "number": [Function],
    "object": [Function],
    "string": [Function],
  },
}
`;

exports[`envConfigMap sandbox example returns expected output 1`] = `
Object {
  "COERCE_NULL": null,
  "COERCE_NULL_DISABLED": "null",
  "COERCE_UNDEFINED": undefined,
  "DB_ENABLE_PROFILER": true,
  "DB_PASSWORD": "mypassword",
  "ENABLE_CORS": true,
  "EXAMPLE_ARRAY": Array [
    "a",
    1,
  ],
  "EXAMPLE_ARRAY_COMMA_DELIM": Array [
    "id",
    "email",
    "dateCreated",
    "dateModified",
  ],
  "EXAMPLE_OBJECT": Object {
    "retry": 3,
    "timeout": 1000,
  },
  "INVALID_TYPE": "passthru          ",
  "LOG_LEVEL": "info",
  "NODE_ENV": "test",
  "SERVER_HOST": undefined,
  "SERVER_PORT": 8080,
  "getOptions": [Function],
  "getRedacted": [Function],
}
`;

exports[`envConfigMap sandbox example returns expected output 2`] = `
Object {
  "COERCE_NULL": null,
  "COERCE_NULL_DISABLED": "null",
  "COERCE_UNDEFINED": undefined,
  "DB_ENABLE_PROFILER": true,
  "DB_PASSWORD": "XXXXXXXXXX",
  "ENABLE_CORS": true,
  "EXAMPLE_ARRAY": Array [
    "a",
    1,
  ],
  "EXAMPLE_ARRAY_COMMA_DELIM": Array [
    "id",
    "email",
    "dateCreated",
    "dateModified",
  ],
  "EXAMPLE_OBJECT": Object {
    "retry": 3,
    "timeout": 1000,
  },
  "INVALID_TYPE": "passthru          ",
  "LOG_LEVEL": "info",
  "NODE_ENV": "test",
  "SERVER_HOST": undefined,
  "SERVER_PORT": 8080,
}
`;
